--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">Popular Courses we offer</h1>
+								<h1 class="mb-10">RENATO GAY</h1>
 								<p>There is a moment in the life of any aspiring.</p>
 							</div>
 						</div>
