--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
+			          <li><a href="index.html">Inicio</a></li>
+			          <li><a href="about.html">Nosotros</a></li>
 			          <li><a href="courses.html">Courses</a></li>
 			          <li><a href="events.html">Events</a></li>
 			          <li><a href="gallery.html">Gallery</a></li>
