--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Inicio</a></li>
-			          <li><a href="about.html"Nosotros</a></li>
+			          <li><a href="about.html">Nosotros</a></li>
 			          <li><a href="courses.html">Equipo</a></li>
 			          <li><a href="events.html">Base de Datos</a></li>
-			          <li><a href="gallery.html"Proyecto</a></li>
+			          <li><a href="gallery.html">Proyecto</a></li>
 			          <li class="menu-has-children"><a href="">Blog</a>
 			            <ul>
 			              <li><a href="blog-home.html">Blog Home</a></li>
