--- a/about.html
+++ b/about.html
@@ -57,11 +57,11 @@
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="index.html">Inicio</a></li>
-			          <li><a href="about.html">Nosotros</a></li>
-			          <li><a href="courses.html">Courses</a></li>
-			          <li><a href="events.html">Events</a></li>
-			          <li><a href="gallery.html">Gallery</a></li>
+			          <li><a href="Inicio.html">Inicio</a></li>
+			          <li><a href="Nosotros.html">Nosotros</a></li>
+			          <li><a href="Equipo.html">Courses</a></li>
+			          <li><a href="Base de Datos.html">Events</a></li>
+			          <li><a href="Proyecto.html">Gallery</a></li>
 			          <li class="menu-has-children"><a href="">Blog</a>
 			            <ul>
 			              <li><a href="blog-home.html">Blog Home</a></li>
