--- a/about.html
+++ b/about.html
@@ -57,32 +57,12 @@
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="Inicio.html">Inicio</a></li>
-			          <li><a href="Nosotros.html">Nosotros</a></li>
-			          <li><a href="Equipo.html">Courses</a></li>
-			          <li><a href="Base de Datos.html">Events</a></li>
-			          <li><a href="Proyecto.html">Gallery</a></li>
-			          <li class="menu-has-children"><a href="">Blog</a>
-			            <ul>
-			              <li><a href="blog-home.html">Blog Home</a></li>
-			              <li><a href="blog-single.html">Blog Single</a></li>
-			            </ul>
-			          </li>	
-			          <li class="menu-has-children"><a href="">Pages</a>
-			            <ul>
-		              		<li><a href="course-details.html">Course Details</a></li>		
-		              		<li><a href="event-details.html">Event Details</a></li>		
-			                <li><a href="elements.html">Elements</a></li>
-					          <li class="menu-has-children"><a href="">Level 2 </a>
-					            <ul>
-					              <li><a href="#">Item One</a></li>
-					              <li><a href="#">Item Two</a></li>
-					            </ul>
-					          </li>					                		
-			            </ul>
-			          </li>					          					          		          
-			          <li><a href="contact.html">Contact</a></li>
-			        </ul>
+			          <li><a href="index.html">Inicio</a></li>
+			          <li><a href="about.html">Nosotros</a></li>
+			          <li><a href="courses.html">Equipo</a></li>
+			          <li><a href="events.html">Base de Datos</a></li>
+			          <li><a href="gallery.html">Proyecto</a></li>
+			</ul>
 			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
 		    </div>
