--- a/index.html
+++ b/index.html
@@ -77,11 +77,10 @@
 					<div class="row fullscreen d-flex align-items-center justify-content-between">
 						<div class="banner-content col-lg-9 col-md-12">
 							<h1 class="text-uppercase">
-								We Ensure better education
-								for a better world			
+								 “No hay medicina que cure lo que no cura la felicidad.”
 							</h1>
 							<p class="pt-10 pb-10">
-								In the history of modern astronomy, there is probably no one greater leap forward than the building and launch of the space telescope known as the Hubble.
+							 	Gabriel García Marquez
 							</p>
 							<a href="#" class="primary-btn text-uppercase">Get Started</a>
 						</div>										
@@ -97,40 +96,38 @@
 						<div class="col-lg-4">
 							<div class="single-feature">
 								<div class="title">
-									<h4>Learn Online Courses</h4>
+									<h4>Ingeniería Biomédica</h4>
 								</div>
 								<div class="desc-wrap">
 									<p>
-										Usage of the Internet is becoming more common due to rapid advancement
-										of technology.
+										Utiliza los conocimientos en ciencias básicas y principios de
+										ingeniería para crear productos orientados a mejorar la calidad de vida.
 									</p>
-									<a href="#">Join Now</a>									
+												
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4">
 							<div class="single-feature">
 								<div class="title">
-									<h4>No.1 of universities</h4>
+									<h4>Fundamentos de Biodiseño</h4>
 								</div>
 								<div class="desc-wrap">
 									<p>
-										For many of us, our very first experience of learning about the celestial bodies begins when we saw our first.
-									</p>
-									<a href="#">Join Now</a>									
+										El curso desarrolla en los estudiantes capacidades para detectar 
+										oportunidades de innovación tecnológica a nivel de producto y/o servicio.								
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-4">
 							<div class="single-feature">
 								<div class="title">
-									<h4>Huge Library</h4>
+									<h4>Paraplejia</h4>
 								</div>
 								<div class="desc-wrap">
 									<p>
-										If you are a serious astronomy fanatic like a lot of us are, you can probably remember that one event.
+										Al menos 500 000 personas sufren lesiones medulares cada año en todo el mundo
 									</p>
-									<a href="#">Join Now</a>									
 								</div>
 							</div>
 						</div>												
