--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 			          <li><a href="index.html">Inicio</a></li>
 			          <li><a href="about.html">Nosotros</a></li>
 			          <li><a href="courses.html">Equipo</a></li>
-			          <li><a href="events.html">Base de Datos</a></li>
-			          <li><a href="gallery.html">Proyecto</a></li>
+			          <li><a href="events.html">Proyecto</a></li>
+			          <li><a href="gallery.html">Base de datos</a></li>
 			       
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
