--- a/courses.html
+++ b/courses.html
@@ -31,7 +31,7 @@
 			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>	
-		  <header id="header" id="home">
+		  <header id="header" id="Inicio">
 	  		<div class="header-top">
 	  			<div class="container">
 			  		<div class="row">
@@ -57,11 +57,11 @@
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="courses.html">Courses</a></li>
-			          <li><a href="events.html">Events</a></li>
-			          <li><a href="gallery.html">Gallery</a></li>
+			          <li><a href="index.html">Inicio</a></li>
+			          <li><a href="about.html">Nostros</a></li>
+			          <li><a href="courses.html">Equipo</a></li>
+			          <li><a href="events.html">Proyecto</a></li>
+			          <li><a href="gallery.html">Base de datos</a></li>
 			          <li class="menu-has-children"><a href="">Blog</a>
 			            <ul>
 			              <li><a href="blog-home.html">Blog Home</a></li>
