--- a/courses.html
+++ b/courses.html
@@ -104,11 +104,11 @@
 							<div class="details">
 								<a href="course-details.html">
 									<h4>
-										Learn Designing
+										Renato Rupay
 									</h4>
 								</a>
 								<p>
-									When television was young, there was a hugely popular show based on the still popular fictional characte										
+									Coordinador organizacional									
 								</p>
 							</div>
 						</div>	
@@ -126,11 +126,11 @@
 							<div class="details">
 								<a href="course-details.html">
 									<h4>
-										Learn React js beginners
+										Ana Lucia Cruzate
 									</h4>
 								</a>
 								<p>
-									When television was young, there was a hugely popular show based on the still popular fictional characte										
+									Coordinadora de materiales y hardware										
 								</p>
 							</div>
 						</div>	
@@ -148,11 +148,11 @@
 							<div class="details">
 								<a href="course-details.html">
 									<h4>
-										Learn Photography
+										Gloria Atencio
 									</h4>
 								</a>
 								<p>
-									When television was young, there was a hugely popular show based on the still popular fictional characte										
+									Coordinadora editorial										
 								</p>
 							</div>
 						</div>	
@@ -170,11 +170,11 @@
 							<div class="details">
 								<a href="course-details.html">
 									<h4>
-										Learn Photography
+										Kevin Vila
 									</h4>
 								</a>
 								<p>
-									When television was young, there was a hugely popular show based on the still popular fictional characte										
+									Coordinador de información										
 								</p>
 								</div>									
 							</div>								
