--- a/courses.html
+++ b/courses.html
@@ -95,6 +95,11 @@
 								<div class="thumb relative">
 									<div class="overlay overlay-bg"></div>	
 									<img class="img-fluid" src="img/p1.jpg" alt="">
+									</div>
+								<div class="meta d-flex justify-content-between">
+									<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
+									<h4></h4>
+								</div>						
 							</div>
 							<div class="details">
 								<a href="course-details.html">
