--- a/courses.html
+++ b/courses.html
@@ -97,7 +97,7 @@
 									<img class="img-fluid" src="img/p1.jpg" alt="">
 									</div>
 								<div class="meta d-flex justify-content-between">
-									<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
 									<h4></h4>
 								</div>						
 							</div>
@@ -119,8 +119,8 @@
 									<img class="img-fluid" src="img/p2.jpg" alt="">
 								</div>
 								<div class="meta d-flex justify-content-between">
-									<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-									<h4>$150</h4>
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
 								</div>									
 							</div>
 							<div class="details">
@@ -141,8 +141,8 @@
 									<img class="img-fluid" src="img/p3.jpg" alt="">
 								</div>
 								<div class="meta d-flex justify-content-between">
-									<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-									<h4>$150</h4>
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
 								</div>									
 							</div>
 							<div class="details">
@@ -163,8 +163,8 @@
 									<img class="img-fluid" src="img/p4.jpg" alt="">
 								</div>
 								<div class="meta d-flex justify-content-between">
-									<p><span class="lnr lnr-users"></span> 355 <span class="lnr lnr-bubble"></span>35</p>
-									<h4>$150</h4>
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
 										</div>									
 							</div>
 							<div class="details">
