--- a/courses.html
+++ b/courses.html
@@ -50,7 +50,7 @@
 			  		</div>			  					
 	  			</div>
 			</div>
-		    <div class="container main-menu">
+		<div class="container main-menu">
 		    	<div class="row align-items-center justify-content-between d-flex">
 			      <div id="logo">
 			        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
@@ -58,11 +58,14 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Inicio</a></li>
-			          <li><a href="about.html">Nostros</a></li>
+			          <li><a href="about.html">Nosotros</a></li>
 			          <li><a href="courses.html">Equipo</a></li>
 			          <li><a href="events.html">Proyecto</a></li>
-			          <li><a href="gallery.html">Base de datos</a></li>
-			            <ul>
+			          <li><a href="gallery.html">Base de datos</a></li>  			                		
+			           </ul>
+			          </li>					          					          		          
+			          <li><a href="contact.html">Contact</a></li>
+			        </ul>
 		               </nav><!-- #nav-menu-container -->		    		
 		    	</div>
 		    </div>
