--- a/courses.html
+++ b/courses.html
@@ -31,7 +31,7 @@
 			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>	
-		  <header id="header" id="Inicio">
+		  <header id="header" id="home">
 	  		<div class="header-top">
 	  			<div class="container">
 			  		<div class="row">
@@ -50,7 +50,7 @@
 			  		</div>			  					
 	  			</div>
 			</div>
-		<div class="container main-menu">
+		    <div class="container main-menu">
 		    	<div class="row align-items-center justify-content-between d-flex">
 			      <div id="logo">
 			        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
@@ -66,11 +66,11 @@
 			          </li>					          					          		          
 			          <li><a href="contact.html">Contact</a></li>
 			        </ul>
-		               </nav><!-- #nav-menu-container -->		    		
+			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
 		    </div>
 		  </header><!-- #header -->
-			  
+		
 			<!-- start banner Area -->
 			<section class="banner-area relative about-banner" id="home">	
 				<div class="overlay overlay-bg"></div>
