--- a/events.html
+++ b/events.html
@@ -99,8 +99,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Marzo, 2019</p>
 									<a href="semana1.html"><h4>Semana 1</h4></a>
-									<p>Paraplejia</p>
-									<p>Deficinición de la prolemática</p>
+									<p>Introducción al Taller de Biodiseño</p>
 								</div>
 							</div>
 						</div>
@@ -112,8 +111,8 @@
 								<div class="detials col-12 col-md-6">
 									<p>Marzo, 2019</p>
 									<a href="semana2.html"><h4>Semana 2</h4></a>
-									<p>Estado del arte</p>
-									<p>Requerimientos de diseño</p>
+									<p>Identificación del problema</p>
+									<p>Caso clinico</p>
 								</div>
 							</div>
 						</div>
@@ -125,7 +124,8 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana3.html"><h4>Semana 3</h4></a>
-									<p>sem3</p>
+									<p>Estado del arte</p>
+                                                                        <p>Requerimientos de diseño</p>
 								</div>
 							</div>
 						</div>
@@ -137,7 +137,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana4.html"><h4>Semana 4</h4></a>
-									<p>sem4</p>
+									<p>Desarrollo del plan de trabajo</p>
 								</div>
 							</div>
 						</div>
