--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		  </header><!-- #header -->
 
 			<!-- start banner Area -->
-			<section class="banner-area relative" id="home">
+			<section class="banner-area relative about-banner" id="home">
 				<div class="overlay overlay-bg"></div>	
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-between">
