--- a/events.html
+++ b/events.html
@@ -94,7 +94,7 @@
 						<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sem1.PNG" alt="">
+									<img class="img-fluid" src="img/sema1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Marzo, 2019</p>
