--- a/semana1.html
+++ b/semana1.html
@@ -57,11 +57,11 @@
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="courses.html">Courses</a></li>
-			          <li><a href="events.html">Events</a></li>
-			          <li><a href="gallery.html">Gallery</a></li>
+			          <li><a href="index.html">Inicio</a></li>
+			          <li><a href="about.html">Nosotros</a></li>
+			          <li><a href="courses.html">Equipo</a></li>
+			          <li><a href="events.html">Proyecto</a></li>
+			          <li><a href="gallery.html">Base de datos</a></li>
 			          
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
