--- a/semana2.html
+++ b/semana2.html
@@ -1,1 +1,151 @@
+<!DOCTYPE html>
+	<html lang="zxx" class="no-js">
+   </head>
+ <body class="always_vert_scroll">
 
+  <div class="clearfix" id="page"><!-- group -->
+   <div class="clearfix grpelem" id="pu4750"><!-- group -->
+    <div class="browser_width mse_pre_init" id="u4750-bw">
+     <div id="u4750"><!-- simple frame --></div>
+    </div>
+    <a class="nonblock nontext museBGSize mse_pre_init" id="u4848" href="index-2.html"><!-- content --></a>
+    <div class="browser_width mse_pre_init" id="u13219-bw">
+     <div class="museBGSize" id="u13219"><!-- simple frame --></div>
+    </div>
+   </div>
+   <div class="clearfix grpelem" id="pu4748-4"><!-- column -->
+    <div class="T-tulo-H1 clearfix colelem" id="u4748-4"><!-- content -->
+     <h1>SEMANA Nº1</h1>
+    </div>
+    <div class="Texto-Subt-tulo clearfix colelem" id="u4749-4"><!-- content -->
+     <p>Planteamiento de la problemática</p>
+    </div>
+    <div class="colelem" id="u4747"><!-- simple frame --></div>
+    <div class="T-tulo-H1 clearfix colelem" id="u4732-4"><!-- content -->
+     <h1>PROBLEMÁTICA</h1>
+    </div>
+    <div class="clearfix colelem" id="u4737-4"><!-- content -->
+     <p>Incidencia</p>
+    </div>
+    <div class="clearfix colelem" id="u4740-4"><!-- content -->
+     <p>La importancia de la prevalencia en este tipo de tendinopatias es el grado de absentismo en el trabajo que provoca. Se estima que 5% de los pacientes con esta condicion se reportan abscentes por enfermedad con un promedio de 29 dias de falta al año. De esta manera, solo en Reino Unido suposo un costo de alrededor de 27 millones de libras en el 2012, para trabajadores de la clase media (Hopkins et al., 2015, p.5)</p>
+    </div>
+    <div class="clearfix colelem" id="u11853"><!-- group -->
+     <div class="grpelem" id="u10608"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u4738-6"><!-- content -->
+      <p id="u4738-2">¿Sabías qué?</p>
+      <p id="u4738-4">En una conferencia en Dublin, acordaron que las empresas&nbsp; deberían&nbsp; pagar hasta €/47000 a cada persona que haya adquirido tenosinovitis de de Quervain como indemnización</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="ppu13328-4"><!-- group -->
+     <div class="clearfix grpelem" id="pu13328-4"><!-- column -->
+      <div class="clearfix colelem" id="u13328-4"><!-- content -->
+       <p>Hasta</p>
+      </div>
+      <div class="clearfix colelem" id="u13222-4"><!-- content -->
+       <p>€/. 921</p>
+      </div>
+      <div class="clearfix colelem" id="u13322-4"><!-- content -->
+       <p>Terapia física estándar por persona</p>
+      </div>
+     </div>
+     <div class="grpelem" id="u13325" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="97" data-mu-ie-matrix-dy="-97"><!-- simple frame --></div>
+     <div class="clearfix grpelem" id="u13331-4"><!-- content -->
+      <p>50%</p>
+     </div>
+     <div class="clearfix grpelem" id="u13334-4"><!-- content -->
+      <p>De los pacientes, reinciden en un cuadro de tenosinovitis cada 12 meses aproximadamente.</p>
+     </div>
+    </div>
+    <div class="Texto clearfix colelem" id="u13337-4"><!-- content -->
+     <p>Hopkins et al., 2015, p.6</p>
+    </div>
+    <div class="clearfix colelem" id="u10605-4"><!-- content -->
+     <p>En una población joven y activa se reportan cerca de 11,332 casos de 12,117,749 personas al año. Es decir, 2.8 casos por cada 1000 mil personas al años (Wolf et al.,2008). Comparando con datos estadísticos de la población trabajadora de Francia, 3710 trabajadores&nbsp; sufrían y estaban limitados por esta enfermedad con una prevalencia del 1.2% (Petir et al., 2011). Este alto indice de prevalencia en diferentes regiones muestra un evidente problema disruptivo que afecta a un grande numero de personas y sus entornos. Por otro lado, en un estudio de lationamerica realizado a 4250 adultos pertenecientes a grupos indígenas, se encontró una prevalencia de 0.45% y una proporción mujer a hombre de casi 5 veces su cantidad (Alvarez et al., 2016).</p>
+    </div>
+    <div class="T-tulo-H1 clearfix colelem" id="u4741-4"><!-- content -->
+     <h1>¿Qué es la enfermedad de de Quervain?</h1>
+    </div>
+    <div class="clearfix colelem" id="u4742-5"><!-- content -->
+     <p class="Texto" id="u4742-2">La enfermedad de De Quervain o tenosinovitis estenosante de la vaina senovial es la inflamación de los tendones del abductor largo y extensor corto, y de dicha vaina (Frontera, Silver y Rizzo, 2015, p.136). Asimismo, el engrosamiento de la misma es característico y pese a que presenta inflamación no se sabe exactamente cómo se produce o qué influencia tiene sobre la enfermedad de De Quervain. (Kuo et al., 2015, p.S146-s150) .</p>
+     <p id="u4742-3">&nbsp;</p>
+    </div>
+    <div class="clearfix colelem" id="pu4743-4"><!-- group -->
+     <div class="clearfix grpelem" id="u4743-4"><!-- content -->
+      <p>Causas</p>
+     </div>
+     <div class="clearfix grpelem" id="u4744-4"><!-- content -->
+      <p>Síntomas</p>
+     </div>
+    </div>
+    <div class="clearfix colelem" id="pu4745"><!-- group -->
+     <div class="museBGSize grpelem" id="u4745"><!-- content --></div>
+     <div class="museBGSize grpelem" id="u4746"><!-- content --></div>
+    </div>
+    <div class="T-tulo-H1 clearfix colelem" id="u4728-4"><!-- content -->
+     <h1>TRATAMIENTO</h1>
+    </div>
+    <img class="colelem" id="u4730-4" alt="Los objetivos de la terapia son reducir el dolor y recobrar la funcionalidad afectada de la mano." width="960" height="34" src="images/u4730-41b77.png?crc=4090055632"/><!-- rasterized frame -->
+    <div class="museBGSize colelem" id="u4751"><!-- content --></div>
+    <div class="T-tulo-H1 clearfix colelem" id="u4729-4"><!-- content -->
+     <h1>Complicaciones</h1>
+    </div>
+    <div class="museBGSize colelem" id="u4731"><!-- content --></div>
+    <div class="T-tulo-H1 clearfix colelem" id="u4735-4"><!-- content -->
+     <h1>REFERENCIAS</h1>
+    </div>
+    <div class="clearfix colelem" id="u4736-21"><!-- content -->
+     <p class="Texto" id="u4736-2">-Kuo et al. (2015, 2 de mayo). Inflamation is present in De Quervain Disease – Correlation study between</p>
+     <p class="Texto" id="u4736-4">biochemical and histopathological evaluation. Annals of plastic suregery. 74.</p>
+     <p class="Texto" id="u4736-6">-Frontera, W., Silver, J. &amp;amp; Rizzo, T..(2015). Essentials of physical medicine and Rehabilitation: Musculoskeletal</p>
+     <p class="Texto" id="u4736-8">disorders, pain and rehabilitation. Philadelphia: Elsevier</p>
+     <p class="Texto" id="u4736-10">-Moore J, (1997, octubre). De Quervain’s tenosynovitis: stenoising tenosynovitis of the fisrt dorsal</p>
+     <p class="Texto" id="u4736-12">compartment. J Occup Environ Med. 39. pp.990-1002.</p>
+     <p class="Texto" id="u4736-14">-Hopkins, C., Fu, S.-C., Chua, E., Hu, X., Rolf, C., Mattila, V. M., … Chan, K.-M. (2016). Critical review on the socio-economic impact of tendinopathy. Asia-Pacific Journal of Sports Medicine, Arthroscopy, Rehabilitation and Technology, 4, 9–20. doi:10.1016/j.asmart.2016.01.002</p>
+     <p class="Texto" id="u4736-16">-Petit Le Manac’h A, Roquelaure Y, Ha C, Bodin J, Meyer G, Bigot F, Veaudor M, Descatha A, Goldberg M, Imbernon E. Risk factors for de Quervain’s disease in a French working population. Scand J Work Environ Health 2011;37(5):394– 401. doi:10.5271/sjweh.3160</p>
+     <p class="Texto" id="u4736-18">-Alvarez-Nemegyei, J., Peláez-Ballestas, I., Goñi, M., Julián-Santiago, F., García-García, C., Quintana, R., … Pons-Estel, B. A. (2016). Prevalence of rheumatic regional pain syndromes in Latin-American indigenous groups: a census study based on COPCORD methodology and syndrome-specific diagnostic criteria. Clinical Rheumatology, 35(S1), 63–70. doi:10.1007/s10067-016-3188-y</p>
+     <p id="u4736-19">&nbsp;</p>
+    </div>
+    <nav class="MenuBar clearfix colelem" id="menuu9921"><!-- horizontal box -->
+     <div class="MenuItemContainer clearfix grpelem" id="u9929"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu transition rounded-corners clearfix colelem" id="u9930" href="semana-2.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u9933-4"><!-- content --><p>Semana 2</p></div></a>
+     </div>
+    </nav>
+   </div>
+   <div class="verticalspacer" data-offset-top="3900" data-content-above-spacer="3900" data-content-below-spacer="61"></div>
+  </div>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   // Decide whether to suppress missing file error or not based on preference setting
+var suppressMissingFileError = false
+</script>
+  <script type="text/javascript">
+   window.Muse.assets.check=function(c){if(!window.Muse.assets.checked){window.Muse.assets.checked=!0;var b={},d=function(a,b){if(window.getComputedStyle){var c=window.getComputedStyle(a,null);return c&&c.getPropertyValue(b)||c&&c[b]||""}if(document.documentElement.currentStyle)return(c=a.currentStyle)&&c[b]||a.style&&a.style[b]||"";return""},a=function(a){if(a.match(/^rgb/))return a=a.replace(/\s+/g,"").match(/([\d\,]+)/gi)[0].split(","),(parseInt(a[0])<<16)+(parseInt(a[1])<<8)+parseInt(a[2]);if(a.match(/^\#/))return parseInt(a.substr(1),
+16);return 0},f=function(f){for(var g=document.getElementsByTagName("link"),j=0;j<g.length;j++)if("text/css"==g[j].type){var l=(g[j].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!l||!l[1]||!l[2])break;b[l[1]]=l[2]}g=document.createElement("div");g.className="version";g.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(g);for(j=0;j<Muse.assets.required.length;){var l=Muse.assets.required[j],k=l.match(/([\w\-\.]+)\.(\w+)$/),i=k&&k[1]?
+k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.html"):Muse.assets.required.push("jquery-1.8.3.min.html");
+g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
+setTimeout(function(){f(!0)},5E3):f()}};
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musepolyfill.bgsize","jquery.musemenu","jquery.scrolleffects"],function(c){var $ = c;$(document).ready(function(){try{
+window.Muse.assets.check($);/* body */
+Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
+Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
+Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.fullPage('#page');/* 100% height page */
+$('#u4750-bw').registerPositionScrollEffect([{"speed":[null,0],"in":[-Infinity,10.95]},{"speed":[null,0],"in":[10.95,Infinity]}]);/* scroll effect */
+$('#u4848').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,11.05]},{"speed":[0,0],"in":[11.05,Infinity]}]);/* scroll effect */
+$('#u13219-bw').registerPositionScrollEffect([{"speed":[null,1],"in":[-Infinity,672.5]},{"speed":[null,1],"in":[672.5,Infinity]}]);/* scroll effect */
+$('#u13219').registerBackgroundPositionScrollEffect([{"speed":[0,0.5],"in":[-Infinity,672.5]},{"speed":[0,0.5],"in":[672.5,Infinity]}]);/* scroll effect */
+Muse.Utils.showWidgetsWhenReady();/* body */
+Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
+}catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
+
+</script>
+  <!-- RequireJS script -->
+  <script src="scripts/require8cb2.js?crc=7928878" type="text/javascript" async data-main="scripts/museconfig.js?crc=310584261" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+   </body>
+
+<!-- Mirrored from estefanoa21.github.io/Proyecto-TendinitisdeQuervain/semana-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 09 Apr 2019 15:07:19 GMT -->
+</html>
