--- a/semana3.html
+++ b/semana3.html
@@ -76,7 +76,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°3	
+								SEMANA N°3
+						        <h1 class="text-white">
+								Estado del arte y requerimientos de diseño
 							</h1>	
 							<p class="text-white link-nav"><a href="index.html">Planteamiento de la problemática</a></p>
 						</div>	
