--- a/semana2.html
+++ b/semana2.html
@@ -76,11 +76,11 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°3
+								SEMANA N°2
 						        <h1 class="text-white">
-								Estado del arte y requerimientos de diseño
+								Planteamiento de la problemática
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Planteamiento de la problemática</a></p>
+							
 						</div>	
 					</div>
 				</div>
