--- a/semana4.html
+++ b/semana4.html
@@ -76,9 +76,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°3
+								SEMANA N°4
 						        <h1 class="text-white">
-								Estado del arte y requerimientos de diseño
+								Desarollo del plan de trabajo
 							</h1>	
 							<p class="text-white link-nav"><a href="index.html">Planteamiento de la problemática</a></p>
 						</div>	
