--- a/semana2.html
+++ b/semana2.html
@@ -74,10 +74,10 @@
 				<div class="overlay overlay-bg"></div>
 				<div class="container">				
 					<div class="row d-flex align-items-center justify-content-center">
-						<div class="about-content col-lg-8">
+						<div class="about-content col-lg-12">
 							<h1 class="text-white">
 								SEMANA N°2
-						        <h3 class="text-white">
+						        <h1 class="text-white">
 								Planteamiento de la problemática
 							</h1>	
 							
@@ -88,6 +88,10 @@
 			<!-- End banner Area -->	
 
 			<!-- Start Sample Area -->
+				<div class="row d-flex align-items-center justify-content-center">
+						<div class="about-content col-lg-12">
+							<h1 class="text-white">
+								Problematica
 			<section class="sample-text-area">
 				<div class="container">
 					<h1 class="text-white">PROBLEMÁTICA</h1>	
