--- a/semana2.html
+++ b/semana2.html
@@ -88,13 +88,9 @@
 			<!-- End banner Area -->	
 
 			<!-- Start Sample Area -->
-				<div class="row d-flex align-items-center justify-content-center">
-						<div class="about-content col-lg-12">
-							<h1 class="text-white">
-								Problematica
-			<section class="sample-text-area">
+		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="container">
-					<h1 class="text-white">PROBLEMÁTICA</h1>	
+					<h1 class="text-black">PROBLEMÁTICA</h1>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
