--- a/semana2.html
+++ b/semana2.html
@@ -89,7 +89,7 @@
 
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
-				<div class="container">
+				<div class="about-content col-lg-12">
 					<h1 class="text-black">PROBLEMÁTICA</h1>	
 				</div>
 			</section>
