--- a/semana2.html
+++ b/semana2.html
@@ -99,16 +99,14 @@
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">Incidencia</h3>
+						<h2 class="mb-30">Incidencia en el mundo</h2>
 						<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/d.jpg" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-9 mt-sm-20 left-align-p">
-								<p>En el mundo La incidencia de la lesión de medula espinal(LME), tanto traumáticas como no traumáticas, probablemente se sitúe entre 40 y80 casos por millón de habitantes. 
-									Sobre la base de la población mundial estimada en 2012, esto significa que, cada año, entre 250.000 y 500.000 personas sufren una LME.</p>
-								<p>De acuerdo con el Compendio de Estadistico 2000-2017 (Registro Nacional de la Persona con Discapacidad) .Durante el año 2017 se han inscrito personas con diferentes diagnósticos de daño, destacando el diagnóstico de daño que con mayor frecuencia afecta principalmente a la función motora, 
-									que afecta a 118, 664 personas inscritas en el Registro Nacional de las Personas con discapacidad.</p>
+								<p>La incidencia de la lesión de medula espinal (LME), tanto traumáticas como no traumáticas probablemente se sitúe entre 40 y 80 casos por millón de habitantes.Sobre la base de la población mundial estimada en 2012, entre 250.000 y 500.000 personas sufren una LME.</p>
+								<p>La incidencia de las LME traumáticas declarada en estudios por países varía entre 13 por millón y 53 por millón. Históricamente, hasta el 90 por ciento de las LME han sido de origen traumático, pero datos de los estudios más recientes indican una leve tendencia al aumento de las LME no traumáticas. Los estudios disponibles reportan una incidencia de las LME no traumáticas de 26 por millón.(OMS)[1] </p>
 							</div>
 						</div>
 					</div>
