--- a/semana2.html
+++ b/semana2.html
@@ -102,7 +102,7 @@
 						<h2 class="mb-30">Incidencia en el mundo</h2>
 						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/d.jpg" alt="" class="img-fluid">
+								<img src="img/elements/mapa.png" alt="" class="png-fluid">
 							</div>
 							<div class="col-md-9 mt-sm-20 left-align-p">
 								<p>La incidencia de la lesión de medula espinal (LME), tanto traumáticas como no traumáticas probablemente se sitúe entre 40 y 80 casos por millón de habitantes.Sobre la base de la población mundial estimada en 2012, entre 250.000 y 500.000 personas sufren una LME.</p>
