--- a/semana2.html
+++ b/semana2.html
@@ -111,6 +111,16 @@
 							</div>
 						</div>
 					</div>
+				<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">¿ Qué es la paraplejia ?/h2>
+						</div>
+					         <div class="col-md-9 mt-sm-20 left-align-p">
+								<p>La American Spinal Injury Association (ASIA) define Paraplejia como “término que se refiere al déficit o pérdida de función motora y/o sensitiva en los segmentos torácicos, lumbares o sacros de la médula espinal (pero no cervicales), secundarios al daño de los elementos neurales del canal raquídeo. En la paraplejia, la función de los brazos está preservada, pero dependiendo del nivel de lesión, el tronco, piernas y órganos pélvicos estarán implicados.[2]</p>
+                                                         </div>
+					        </div>
+					</div>
 					<div class="section-top-border text-right">
 						<h3 class="mb-30">Right Aligned</h3>
 						<div class="row">
