--- a/semana2.html
+++ b/semana2.html
@@ -135,6 +135,38 @@
 							</div>
 						</div>
 					</div>
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">Exploración motora</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-20 left-align-p">
+								<p>La fuerza de cada músculo se debe de graduar en escala de Daniels[3]</p>
+						         </div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/escaladaniel.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">REFERENCIAS</h2>
+						</div>
+					         <div class="col-md-5 mt-sm-5 left-align-p">
+								<p>1.Organización Mundial de la Salud. (2013). International Perspectives on Spinal Cord Injury. Summary. 2014, de Swiss Paraplegic Research (SPF)</p>
+							 <p>2.Forner Cordero, Isabel. (2005). Tratamiento conservador versus quirurgico de la paraplejia traumática por fracturas torácicas y lumbares.. 17-06-2005, de Universitat de València. Departament de Medicina</p>
+							 <p>3.Cohen ME, Ditunno JF, Donovan WH, Maynard FM. A test of the 1992 International Standards for neurological and functional classification of spinal cord injury. Spinal cord. 1998;36:554-60.</p>
+                                                         <p>4.Organización Mundial de la Salud. (2013, 19 noviembre). Lesiones medulares. 16 marzo, 2019</p>
+							  <p>5.Mayo Clinic. (2017a, 19 diciembre). Lesiones de la médula espinal - Síntomas y causas - Mayo Clinic. 16 marzo, 2019.</p>
+							  <p>6.Personal de Mayo Clinic. (2017). Lesiones de la médula espinal. marzo 15,2019, de Mayo Clinic.</p>
+							  <p>7.Yolanda Smith. (2018). Complicaciones de la paraplejia. marzo 15,2019, de News Medical.</p>
+					</div>
+					        </div>
+					</div>	
+						
+			
 					<div class="section-top-border text-right">
 						<h3 class="mb-30">Right Aligned</h3>
 						<div class="row">
