--- a/semana2.html
+++ b/semana2.html
@@ -149,6 +149,35 @@
 							</div>
 						</div>
 					</div>
+						<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">Causas y sintomas</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>La paraplejía puede aparecer después de una lesión en la médula espinal. Se produce por los daños en las vértebras, los ligamentos o los discos de la columna vertebral.[4]</p>
+								<p>Algunos de los signos y síntomas de urgencia de una lesión de la médula espinal después de un accidente pueden comprender:
+
+Dolor de espalda intenso o presión en el cuello, la cabeza o la espalda
+
+Debilidad, descoordinación o parálisis en cualquier parte del cuerpo
+
+Entumecimiento, hormigueo o pérdida de sensibilidad en las manos, los dedos, los pies o los dedos de los pies
+
+Pérdida del control de la vejiga o de los intestinos
+
+Dificultad para mantener el equilibrio y caminar
+
+Insuficiencia respiratoria luego de la lesión
+
+Posición extraña o torcida del cuello o la     espalda [5]</p>
+							</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/causas.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
