--- a/semana3.html
+++ b/semana3.html
@@ -102,13 +102,28 @@
 						<h3 class="mb-30">DINAMIC WALK</h3>
 						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/ortesis1.jpg" alt="" class="img-fluid">
+								<img src="img/elements/ortesis1.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-9 mt-sm-20 left-align-p">
 								<p>Nueva ortesis de tobillo y pie que asiste a la dorsiflexión del pie, evitando el equinismo. Realizada en fibra de carbono, lo que proporciona una gran ligereza y la capacidad de termoconformación. Diseñada para un nivel de actividad alto permite al paciente andar y correr sin necesidad de correas, manteniendo la posición dinámica del conjunto pie-tobillo Su diseño con el talón abierto nos proporciona un óptimo ajuste y confort para los diferentes tipos de calzado. Posibilidad de almohadilla para mayor confort del paciente,con tirantes en la zona lateral, fácil de quitarse y ponerse,se adapta fácilmente a calzado normal / extrecho.</p>
 							</div>
 						</div>
 					</div>
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">FÉRULA EN "U"</h3>
+						<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/ortesis2.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Es una ortesis fabricada en propileno, subortholen o plásticos con poca capacidad de flexión. Sus limites son por la cara medial desde el tercio inferior de la pierna abarcando el maleolo tibial, hasta su cara lateral cubriendo también el maleolo peroneal.
+Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la punta de los dedos. Termina en su zona proximal con un cierre velcro envolvente.</p>
+							</div>
+						</div>
+					</div>
+					
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
