--- a/semana3.html
+++ b/semana3.html
@@ -123,19 +123,16 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 						</div>
 					</div>
-					
-				<div class="whole-wrap">
+					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h2 class="mb-30">FÉRULA EN "U"</h2>
-						</div>
-					         <div class="col-md-9 mt-sm-20 left-align-p">
-								<p>Es una ortesis fabricada en propileno, subortholen o plásticos con poca capacidad de flexión. Sus limites son por la cara medial desde el tercio inferior de la pierna abarcando el maleolo tibial, hasta su cara lateral cubriendo también el maleolo peroneal.
-Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la punta de los dedos. Termina en su zona proximal con un cierre velcro envolvente.</p>
-                                                         </div>
-							<div class="row">
+						<h3 class="mb-30">OTP CON ARTICULACIÓN Y TOPE A 90° POSTERIOR:</h3>
+						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/ortesis2.png" alt="" class="png-fluid">
+								<img src="img/elements/ortesis3.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Es el indicado para la inmovilización del tobillo y pie. La ortesis permite un buen posiciona- miento articular. Es usado también para prevenir las deformidades y la inmovilización en post- operatorio. Está confeccionado en material de propileno a medida de cada paciente</p>
 							</div>
 						</div>
 					</div>
