--- a/semana3.html
+++ b/semana3.html
@@ -126,7 +126,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">OTP CON ARTICULACIÓN Y TOPE A 90° POSTERIOR:</h3>
+						<h3 class="mb-30">OTP CON ARTICULACIÓN Y TOPE A 90° POSTERIOR</h3>
 						<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/ortesis3.png" alt="" class="img-fluid">
@@ -136,17 +136,33 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 						</div>
 					</div>
-			        <div class="whole-wrap">
+					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h2 class="mb-30">OTP CON ARTICULACIÓN Y TOPE A 90° POSTERIOR:</h2>
-						</div>
-					         <div class="col-md-9 mt-sm-20 left-align-p">
-								<p>Es el indicado para la inmovilización del tobillo y pie. La ortesis permite un buen posiciona- miento articular. Es usado también para prevenir las deformidades y la inmovilización en post- operatorio. Está confeccionado en material de propileno a medida de cada paciente </p>
-						         </div>
-							<div class="row">
+						<h3 class="mb-30">ORTESIS ANTIEQUINA DE TERMOPLÁSTICO</h3>
+						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/ortesis3.png" alt="" class="png-fluid">
+								<img src="img/elements/ortesis4.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Las ortesis antiequinas tipo "Rancho de los amigos" son dinámicas y están fabricadas en termoplástico rígido (polipropileno o piletileno), a modo de una única valva, que cubre la zona dorsal de la pantorrilla (desde debajo del peroné), salva maléolos y llega hasta la planta del pie, con lo que mantiene la flexión del tobillo a 90°. Es una ferula con resistencia a la fatiga, indicada en aquinos flácidos.</p>
+							<p>Se diferencian tres partes:</p>
+								<p>•Pieza de plástico moldeado, generalmente polpropileno, por poseer mayor capacidad de recuperación</p>
+							<p>•Cierre de tipo velcro-astrcán Opcionalmente, dispositivo corrector</p>
+						<p>•varo/valgo </p>
+							</div>
+						</div>
+					</div>
+			       <div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">WALKAIDE SYSTEM</h3>
+						<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/ortesis5.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Es un sistema estimulador neuromuscular funcional externo que tiene como objetivo solucionar la caída del pie en pacientes que han sufrido daños en las neuronas motoras superiores o en las vías de la médula espinal. Durante la fase de oscilación del caminar, WalkAide estimula eléctricamente los músculos apropiados que causan la dorsifl exión del tobillo y así se puede mejorar la capacidad de andar del paciente. Los benefi cios médicos de la estimulación eléctrica funcional pueden incluir la prevención de la debilidad o falta de uso del músculo, un mayor fl ujo sanguíneo local, el fortalecimiento del músculo y un rango de movimiento articular igual o superior.</p>
 							</div>
 						</div>
 					</div>
