--- a/semana3.html
+++ b/semana3.html
@@ -214,8 +214,8 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							<div class="col-md-3">
 								<img src="img/elements/sol2.png" alt="" class="img-fluid">
 							</div>
-							<div class="col-md-9 mt-sm-20 right-align-p">
-					 <p>El sistema ReWalkTM, también llamado exoesqueleto, es una ortesis de marcha alternante (RGO) motorizada. Está constituido por unos soportes motorizados de activación del movimiento que se colocan en las extremidades inferiores, una plataforma dinámica para evitar el pie equino,unos sensores de movimiento, un arnés y una mochila que transporta un procesador y dos baterías recargables. El paciente ordena los movimientos a través de un control remoto colocado en la muñeca y se ayuda de muletas para mantener el equilibrio. Tras programar el tipo de movimiento (ponerse de pie, sentarse, caminar, pararse, subir y bajar escaleras), los sensores detectan la inclinación del tronco hacia delante, y transmiten una señal para el inicio de la deambulación. La velocidad de marcha del dispositivo se modifica en función de las necesidades de la persona.</p>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+					       <p>El sistema ReWalkTM, también llamado exoesqueleto, es una ortesis de marcha alternante (RGO) motorizada. Está constituido por unos soportes motorizados de activación del movimiento que se colocan en las extremidades inferiores, una plataforma dinámica para evitar el pie equino,unos sensores de movimiento, un arnés y una mochila que transporta un procesador y dos baterías recargables. El paciente ordena los movimientos a través de un control remoto colocado en la muñeca y se ayuda de muletas para mantener el equilibrio. Tras programar el tipo de movimiento (ponerse de pie, sentarse, caminar, pararse, subir y bajar escaleras), los sensores detectan la inclinación del tronco hacia delante, y transmiten una señal para el inicio de la deambulación. La velocidad de marcha del dispositivo se modifica en función de las necesidades de la persona.</p>
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -224,7 +224,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							<div class="col-md-3">
 								<img src="img/elements/sol3.png" alt="" class="img-fluid">
 							</div>
-							<div class="col-md-9 mt-sm-20 right-align-p">
+							<div class="col-md-9 mt-sm-20 left-align-p">
 								<p>Ortesis antiequina dinámica y de bajo costo capaz de realizar movimientos tanto en el plano transversal(abducción y aducción ) como en el sagital(flexión dorsal y flexión plantar) gracias a un elástico con el cual se realizará la tracción q, este se encuentra ubicado por encima de los maleolos del pie la cual permitirá movimientos en el plano sagital ,a su vez este elástico rodeará la cincha supramaleolar permitiendo los movimientos transversales de 3 componentes, una cincha supramaleolar por encima de los maléolos ,un elástico que permita la tracción y un soporte de unión antideslizante</p>
 							</div>
 						</div>
