--- a/semana3.html
+++ b/semana3.html
@@ -166,6 +166,17 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 						</div>
 					</div>
+					<!-- End banner Area -->	
+
+			<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h2 class="text-black">METODOLOGÍA DESING THINKING</h2>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+			
+			<!-- Start Align Area -->
 					<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
