--- a/semana2.html
+++ b/semana2.html
@@ -61,8 +61,6 @@
 			          <li><a href="about.html">Nosotros</a></li>
 			          <li><a href="courses.html">Equipo</a></li>
 			          <li><a href="events.html">Proyecto</a></li>
-			          <li><a href="gallery.html">Base de datos</a></li>
-			          
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
@@ -157,7 +155,6 @@
 					         <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La paraplejía puede aparecer después de una lesión en la médula espinal. Se produce por los daños en las vértebras, los ligamentos o los discos de la columna vertebral.[4]</p>
 								<p>Algunos de los signos y síntomas de urgencia de una lesión de la médula espinal después de un accidente pueden comprender:
-
 Dolor de espalda intenso o presión en el cuello, la cabeza o la espalda
 
 Debilidad, descoordinación o parálisis en cualquier parte del cuerpo
@@ -179,6 +176,20 @@ Posición extraña o torcida del cuello o la     espalda [5]</p>
 						</div>
 					</div>
 					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">Tratamiento</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-20 left-align-p">
+								<p>El tratamiento de las lesiones de la médula espinal se centra en la prevención de más lesiones y en el fortalecimiento de las personas con lesión de la médula espinal para que puedan volver a tener a una vida activa y productiva.[6]</p>
+						         </div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/escaladaniel.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+							<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
 						<h2 class="mb-30">REFERENCIAS</h2>
