--- a/semana2.html
+++ b/semana2.html
@@ -180,12 +180,29 @@ Posición extraña o torcida del cuello o la     espalda [5]</p>
 					<div class="section-top-border">
 						<h2 class="mb-30">Tratamiento</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-20 left-align-p">
+					         <div class="col-md-4 mt-sm-5 left-align-p">
 								<p>El tratamiento de las lesiones de la médula espinal se centra en la prevención de más lesiones y en el fortalecimiento de las personas con lesión de la médula espinal para que puedan volver a tener a una vida activa y productiva.[6]</p>
 						         </div>
 							<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/escaladaniel.png" alt="" class="png-fluid">
+								<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border right-align-p">
+						<h2 class="mb-30">Complicaciones</h2>
+						</div>
+					         <div class="col-md-4 mt-sm-5 right-align-p">
+								<p>Las complicaciones que resultan de paraplejia pueden incluir:</p>
+							 <p>-Dolores de la presión (decúbito)</p>
+							  <p>-Trombosis</p>
+							  <p>-Depresión</p>
+							  <p>-Incontinencia del diafragma y del intestino</p>
+							  <p>-Impotencia</p>
+							  <p>-Desordenes de la circulación</p>
+							  <p>-Dysreflexia autonómico</p>
+							  <p>-Baja del tono muscular</p>
+							  <p>-Dolor</p>
+							  <p>-Pulmonía y otras complicaciones respiratorias [7]</p>
 							</div>
 						</div>
 					</div>
