--- a/semana2.html
+++ b/semana2.html
@@ -188,10 +188,10 @@ Posición extraña o torcida del cuello o la     espalda [5]</p>
 								<img src="img/elements/escaladaniel.png" alt="" class="png-fluid">
 								<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-border right-align-p">
+					<div class="section-top-border">
 						<h2 class="mb-30">Complicaciones</h2>
 						</div>
-					         <div class="col-md-4 mt-sm-5 right-align-p">
+					         <div class="col-md-4 mt-sm-5 left-align-p">
 								<p>Las complicaciones que resultan de paraplejia pueden incluir:</p>
 							 <p>-Dolores de la presión (decúbito)</p>
 							  <p>-Trombosis</p>
