--- a/semana2.html
+++ b/semana2.html
@@ -187,6 +187,9 @@ Posición extraña o torcida del cuello o la     espalda [5]</p>
 							<div class="col-md-3">
 								<img src="img/elements/escaladaniel.png" alt="" class="png-fluid">
 								<div class="whole-wrap">
+									</div>
+						</div>
+					</div>
 				<div class="container">
 					<div class="section-top-border">
 						<h2 class="mb-30">Complicaciones</h2>
