--- a/events.html
+++ b/events.html
@@ -140,6 +140,30 @@
 								</div>
 							</div>
 						</div>
+							<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/sem4.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana5.html"><h4>Semana 5</h4></a>
+									<p>semana5</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/sem4.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana6.html"><h4>Semana 6</h4></a>
+									<p>semana6</p>
+								</div>
+							</div>
+						</div>
 																		
 							
 		</body>
