--- a/events.html
+++ b/events.html
@@ -97,7 +97,7 @@
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Marzo, 2019</p>
-									<a href="semana1.html"><h4>Semana 1</h4></a>
+									<a ><h4>Semana 1</h4></a>
 									<p>Introducción al Taller de Biodiseño</p>
 								</div>
 							</div>
