--- a/semana4.html
+++ b/semana4.html
@@ -80,7 +80,6 @@
 						        <h1 class="text-white">
 								Desarollo del plan de trabajo
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Planteamiento de la problemática</a></p>
 						</div>	
 					</div>
 				</div>
@@ -88,13 +87,12 @@
 			<!-- End banner Area -->	
 
 			<!-- Start Sample Area -->
-			<section class="sample-text-area">
-				<div class="container">
-					<h1 class="text-white">PROBLEMÁTICA</h1>	
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h1 class="text-black">PLAN DE TRABAJO</h1>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
-			
 			<!-- Start Align Area -->
 			<div class="whole-wrap">
 				<div class="container">
