--- a/semana4.html
+++ b/semana4.html
@@ -89,10 +89,16 @@
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">PLAN DE TRABAJO</h1>	
+					<h1 class="text-black">CRONOGRAMA</h1>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
+				<div class="section-top-border">
+						<h3>Image Gallery</h3>
+						<div class="row gallery-item">
+							<div class="col-md-4">
+								<a href="img/elements/crono.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+							</div>
 			<!-- Start Align Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -105,7 +111,7 @@
 						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/g1.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
 							</div>
 
 		</body>
