--- a/semana4.html
+++ b/semana4.html
@@ -99,6 +99,7 @@
 							<div class="col-md-4">
 								<a href="img/elements/crono.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
 							</div>
+			<!-- End Sample Area -->				
 			<!-- Start Align Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -113,6 +114,7 @@
 							<div class="col-md-4">
 								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
 							</div>
+							<!-- End Sample Area -->
 
 		</body>
 	</html>
