--- a/semana4.html
+++ b/semana4.html
@@ -93,6 +93,7 @@
 				</div>
 			</section>
 			<!-- End Sample Area -->
+				<!-- Start Align Area -->
 				<div class="section-top-border">
 						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
@@ -107,6 +108,7 @@
 				</div>
 			</section>
 			<!-- End Sample Area -->
+			<!-- Start Align Area -->
 			
 					<div class="section-top-border">
 						<h3>Image Gallery</h3>
