--- a/semana4.html
+++ b/semana4.html
@@ -108,10 +108,9 @@
 				</div>
 			</section>
 					<div class="section-top-border">
-						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png.jpg);"></div></a>
+								<a href="img/elements/plan.png.png" width="100" height="100" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
 							</div>
 						</div>
 					</div>
