--- a/semana4.html
+++ b/semana4.html
@@ -107,7 +107,7 @@
 					<h1 class="text-black">PLAN DE TRABAJO</h1>	
 				</div>
 			</section>
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<div class="row gallery-item">
 							<div class="col-md-4">
 								<a href="img/elements/plan.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
